refs #63 - update receiptManager.getAll to allow query by seller
